# shanties

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
data/: directory-structure.txt
data/all_songs/across-the-western-ocean/: WSTOCEAN.MID  lyrics.txt  metadata.json
data/all_songs/adieu-madras/: lyrics.txt  metadata.json
data/all_songs/admiral-benbow/: ADBENBOW.MID  lyrics.txt  metadata.json
data/all_songs/all-for-me-grog/: HEREGROG.MID  lyrics.txt  metadata.json
data/all_songs/andrew-rose/: ANDRROSS.MID  lyrics.txt  metadata.json
data/all_songs/as-i-went-a-walking-down-ratcliffe-highway/: RATCLIF.MID  lyrics.txt  metadata.json
data/all_songs/away-rio/: RIOGRAN.MID  lyrics.txt  metadata.json
data/all_songs/banks-of-the-sacramento/: CAMPTWN.MID  lyrics.txt  metadata.json
data/all_songs/blood-red-roses/: BLOODRED.MID  lyrics.txt  metadata.json
data/all_songs/blow-boys-blow/: BLOWBOYS.MID  lyrics.txt  metadata.json
data/all_songs/blow-ye-winds-in-the-morning/: BLOWYE.MID  lyrics.txt  metadata.json
data/all_songs/bold-riley/: BOLDRILY.MID  lyrics.txt  metadata.json
data/all_songs/boney-was-a-warrior/: lyrics.txt  (+2 more)
data/shanty_book/: pg20774-images.html
report/: ISMIR2025_template.tex
results/: complete_shanty_dataset_with_predictions.csv  sea_shanties_analysis_20250410_233421.csv  sea_shanties_analysis_20250410_233421.json  sea_shanties_analysis_20250412_165709.csv  sea_shanties_analysis_20250412_165709.json  shanty_predictions.csv  unknown_shanty_predictions.csv
src/: feature_extractors.py  main.py  shanty_type_classifier.py
(+253 files in other folders)
